# quantum-advantage-lab

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  railway.json
.cache/: README.md
backend/: Dockerfile  cache.py  main.py  qpu_usage.py  requirements.txt
backend/classical/: __init__.py  gradient_opt.py  linear_search.py  matrix_exp.py  random_walk.py
backend/modules/: __init__.py  base.py  search_race.py  simulation_race.py  vqe_race.py  walk_race.py
backend/quantum/: __init__.py  grovers.py  hamiltonian_sim.py  provider.py  quantum_walks.py  vqe.py
backend/static/: qpu_dashboard.html
docs/: circuit_depth_native_gates_explainer.html  ionq_pricing_analysis.html  proposal.html  trotter_comparison.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  initialState.js
scripts/: _common.py  cache.py  collect_hamiltonian_qpu_results.py  dev_backend.sh  dev_frontend.sh  ionq_emulator_test.py  ionq_run_hamiltonian.py  ionq_smoke_test.py  lint.sh  qollab_demo_hamiltonian.py  qpu_charge_demo.py  qpu_one_persistent_job.py  qpu_small_job_test.py  qpu_usage.py  qpu_usage_live_test.py  run_grovers.py  run_hamiltonian.py  run_race.py  run_vqe.py  run_walk.py  scan_hamiltonian.py  test.sh
tests/: conftest.py
tests/e2e/: test_hamiltonian_golden.py
tests/fixtures/: hamiltonian_golden_n3_t05_s4.json
tests/integration/: test_api_hamiltonian.py  test_ionq_emulator.py
tests/unit/: test_cache.py  test_hamiltonian_sim.py  test_matrix_exp.py  test_qpu_usage.py  (+1 more)
(+10 files in other folders)
