[project]
name = "quantum-advantage-lab"
version = "0.1.0"
description = "Real-time web platform that races four quantum algorithms against their classical counterparts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hossein Sadeghi" }]

dependencies = [
    # Web
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "websockets>=12,<14",
    "pydantic>=2,<3",
    # Quantum
    "qiskit>=1.0,<2",
    "qiskit-aer>=0.14,<1",
    # Scientific computing
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
]

[project.optional-dependencies]
# Install with: uv sync --extra ionq
ionq = ["qiskit-ionq>=0.5,<1"]
# Circuit-diagram / docs tooling; uv sync --extra viz
viz = ["matplotlib>=3.9,<4", "pylatexenc>=2.10,<3"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-timeout>=2.3,<3",
    "httpx>=0.27,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: long-running benchmark tests (deselect with -m 'not slow')",
    "integration: tests that hit the FastAPI app or external services",
    "benchmark: numerical benchmarks against published results",
]
asyncio_mode = "auto"
